<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lef_guideline_72"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="56dp" />

    <EditText
        android:id="@+id/firstNameET"
        style="@style/AppTheme.EditText"
        android:hint="@string/first_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/lastNameET"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/lef_guideline_72"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32999998"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/lastNameET"
        android:inputType="textPersonName"
        style="@style/AppTheme.EditText"
        android:hint="@string/last_name_hint"
        app:layout_constraintBottom_toTopOf="@+id/phoneET"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/lef_guideline_72"
        app:layout_constraintTop_toBottomOf="@+id/firstNameET" />

    <EditText
        android:id="@+id/websiteET"
        android:inputType="textWebEditText"
        style="@style/AppTheme.EditText"
        android:hint="@string/website_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/lef_guideline_72"
        app:layout_constraintTop_toBottomOf="@+id/addressET" />

    <EditText
        android:id="@+id/addressET"
        android:inputType="textPostalAddress"
        style="@style/AppTheme.EditText"
        android:hint="@string/address_hint"
        app:layout_constraintBottom_toTopOf="@+id/websiteET"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/lef_guideline_72"
        app:layout_constraintTop_toBottomOf="@+id/emailET" />

    <EditText
        android:id="@+id/phoneET"
        android:inputType="phone"
        style="@style/AppTheme.EditText"
        android:hint="@string/phone_hint"
        app:layout_constraintBottom_toTopOf="@+id/emailET"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/lef_guideline_72"
        app:layout_constraintTop_toBottomOf="@+id/lastNameET" />

    <EditText
        android:id="@+id/emailET"
        android:inputType="textEmailAddress"
        style="@style/AppTheme.EditText"
        android:hint="@string/email_hint"
        app:layout_constraintBottom_toTopOf="@+id/addressET"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/lef_guideline_72"
        app:layout_constraintTop_toBottomOf="@+id/phoneET" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp" />

    <ImageView
        android:id="@+id/firstNameIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_perm_identity_black_24dp"
        android:tint="@color/colorDarkGray"
        app:layout_constraintBottom_toBottomOf="@+id/firstNameET"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/firstNameET" />

    <ImageView
        android:id="@+id/phoneIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_phone_black_24dp"
        android:tint="@color/colorDarkGray"
        app:layout_constraintBottom_toBottomOf="@+id/phoneET"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/phoneET" />

    <ImageView
        android:id="@+id/emailIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_email_black_24dp"
        android:tint="@color/colorDarkGray"
        app:layout_constraintBottom_toBottomOf="@+id/emailET"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/emailET" />

    <ImageView
        android:id="@+id/addressIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_place_black_24dp"
        android:tint="@color/colorDarkGray"
        app:layout_constraintBottom_toBottomOf="@+id/addressET"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/addressET" />

    <ImageView
        android:id="@+id/webIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_public_black_24dp"
        android:tint="@color/colorDarkGray"
        app:layout_constraintBottom_toBottomOf="@+id/websiteET"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/websiteET" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onSaveBtnClicked"
        android:text="@string/save_button_label"
        style="@style/AppTheme.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/lef_guideline_72"
        app:layout_constraintTop_toBottomOf="@+id/websiteET" />

</androidx.constraintlayout.widget.ConstraintLayout>