<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/pizza_shape_image"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="@dimen/space_big"
            android:src="@drawable/ic_round_pizza"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/shape_selector"
            app:checkedButton="@+id/round_shape_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true"
            android:layout_marginTop="@dimen/space_min"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pizza_shape_image">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/round_shape_btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/round_shape"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/square_shape_btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/square_shape"/>
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <HorizontalScrollView
            android:id="@+id/horizontal_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_big"
            app:layout_constraintTop_toBottomOf="@id/shape_selector">

            <com.google.android.material.chip.ChipGroup
                android:layout_marginTop="@dimen/space_min"
                android:layout_marginBottom="@dimen/space_min"
                android:id="@+id/summary_chip_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <androidx.cardview.widget.CardView
            android:id="@+id/ingredients_card"
            app:layout_constraintTop_toBottomOf="@id/horizontal_scroll_view"
            android:layout_marginLeft="@dimen/space_big"
            android:layout_marginRight="@dimen/space_big"
            android:layout_marginTop="@dimen/space_min"
            app:cardCornerRadius="@dimen/space_min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_mid">

                <RadioGroup
                    android:id="@+id/cheese_selector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkedButton="@id/no_cheese_option"
                    app:layout_constraintLeft_toLeftOf="@id/center_guideline"
                    app:layout_constraintTop_toBottomOf="@id/space">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/no_cheese_option"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_cheese_option" />
                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/simple_cheese_option"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cheese_option" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/double_cheese_option"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/double_cheese_option" />
                </RadioGroup>

                <TextView
                    android:id="@+id/card_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lobster"
                    android:text="Ingredients :"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:textColor="@color/colorBlue"
                    android:textSize="20sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/space"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/space_min"
                    app:layout_constraintLeft_toLeftOf="@+id/card_header"
                    app:layout_constraintTop_toBottomOf="@+id/card_header" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/center_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.55672824" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/left_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.05" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/anchovies_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anchovies_ingredient"
                    app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/veggies_option" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/pepperoni_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pepperoni_ingredient"
                    app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/space" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/mushroom_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mushroom_ingredient"
                    app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/pepperoni_option" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/veggies_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/veggies_ingredient"
                    app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/mushroom_option" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <View
            android:id="@+id/customer_space"
            app:layout_constraintLeft_toLeftOf="@id/ingredients_card"
            app:layout_constraintTop_toBottomOf="@id/ingredients_card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_min" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/place_order_button"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/space_big"
            android:layout_marginRight="@dimen/space_big"
            android:backgroundTint="@color/colorBlue"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/customer_space"
            android:layout_height="wrap_content"
            android:text="@string/place_order" />
        <View
            app:layout_constraintLeft_toLeftOf="@id/place_order_button"
            app:layout_constraintTop_toBottomOf="@id/place_order_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_mid" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>